@@ -11,6 +11,7 @@ Changelog 0.7.1.1
 + implement in the playlist of the mediaplayer
 [SA-00439] SallyAPI: implement hold click
 [SA-00445] Sound should unmute if the volume controller is changed
+[SA-00446] dropdown box with many items does not scroll to the currently selected one
 
 
 Changelog 0.7.0.6
